--- a/lib/plausible_web/templates/email/trial_over_email.html.eex
+++ b/lib/plausible_web/templates/email/trial_over_email.html.eex
@@ -10,7 +10,7 @@ We will keep recording stats for another month to give you time to upgrade.
 <br /><br />
 Thanks,<br />
 Uku Taht<br />
-Founder, Plausible Insights
+Founder, Plausible Analytics
 <br /><br />
 --
 <br /><br />
