--- a/lib/plausible_web/templates/layout/_footer.html.eex
+++ b/lib/plausible_web/templates/layout/_footer.html.eex
@@ -5,14 +5,13 @@
       <p class="mt-2">Made by <a href="https://twitter.com/ukutaht" class="light-text underline">@ukutaht</a> in London, UK</p>
     </div>
     <ul class="text-center md:text-left my-4 md:m-0">
-      <li>Read our <a href="/blog/" class="light-text font-medium mr-4 underline">Blog</a></li>
-      <li>Study the <%= link("Documentation", to: "https://docs.#{base_domain()}",target: "_blank",class: "light-text font-medium mr-4 underline") %></li>
-      <li>Check out the <%= link("Live Demo", to: "/plausible.io",class: "light-text font-medium underline") %></li>
+      <li>Read our <a href="https://plausible.io/blog" class="light-text font-medium mr-4 underline">Blog</a></li>
+      <li>Study the <%= link("Documentation", to: "https://docs.plausible.io/",target: "_blank",class: "light-text font-medium mr-4 underline") %></li>
+      <li>Check out the <%= link("Live Demo", to: "https://plausible.io/plausible.io",class: "light-text font-medium underline") %></li>
     </ul>
     <ul class="text-center md:text-left my-4 md:m-0">
-      <li>Give us <a href="/feedback" target="_blank" class="light-text font-medium mr-4 underline">Feedback</a></li>
-      <li>We have a <a href="/roadmap" target="_blank" class="light-text font-medium mr-4 underline">Public roadmap</a></li>
-      <li>Contact us <a href="/contact" class="light-text font-medium mr-4 underline">via email</a></li>
+      <li>Having trouble? Raise an <a href="https://github.com/plausible/analytics/issues" target="_blank" class="light-text font-medium mr-4 underline">issue</a></li>
+      <li>Contact us via <a href="https://plausible.io/contact" class="light-text font-medium mr-4 underline">form</a></li>
     </ul>
   </div>
 </footer>
