--- a/lib/plausible_web/templates/layout/app.html.eex
+++ b/lib/plausible_web/templates/layout/app.html.eex
@@ -50,15 +50,31 @@
                     </div>
                   </li>
                 </ul>
-                <% true -> %>
+                <%  Keyword.fetch!(Application.get_env(:plausible, :selfhost), :disable_authentication) -> %>
                   <ul class="flex" x-show="!document.cookie.includes('logged_in=true')">
                     <li>
-                      <div class="inline-flex">
-                        <a href="/login" class="font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:text-gray-900 transition duration-150 ease-in-out">Login</a>
-                      </div>
-                      <div class="inline-flex rounded shadow ml-6">
-                        <a href="/register" class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">Start free trial</a>
-                      </div>
+                        <div class="inline-flex rounded shadow ml-6">
+                          <a href="/" class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">My Sites</a>
+                        </div>
+                    </li>
+                  </ul>
+                <%  Keyword.fetch!(Application.get_env(:plausible, :selfhost), :disable_registration) -> %>
+                  <ul class="flex" x-show="!document.cookie.includes('logged_in=true')">
+                    <li>
+                        <div class="inline-flex">
+                          <a href="/login" class="font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:text-gray-900 transition duration-150 ease-in-out">Login</a>
+                        </div>
+                    </li>
+                  </ul>
+                <%  true -> %>
+                  <ul class="flex" x-show="!document.cookie.includes('logged_in=true')">
+                    <li>
+                        <div class="inline-flex">
+                          <a href="/login" class="font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:text-gray-900 transition duration-150 ease-in-out">Login</a>
+                        </div>
+                        <div class="inline-flex rounded shadow ml-6">
+                          <a href="/register" class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">Sign up</a>
+                        </div>
                     </li>
                   </ul>
             <% end %>
